Refactor architecture to decouple Logic/View and improve portability
- Architecture Overhaul: Implemented strict separation between Game Logic (simulation) and Game View (presentation), aligning with the McShaffry architecture.
  - Introduced `game_logic` struct to own the simulation state (event system, process manager).
  - Introduced `human_view` (implementing a `game_view` interface) to manage the window, camera, and UI rendering.
  - The main loop now orchestrates Input -> Logic Update -> View Render sequentially.

- System Safety & Portability:
  - Updated all system update functions (`ai`, `physics`, `gravity`) to match the strict `(game_logic*, float)` signature. This resolves potential stack corruption and ensures compatibility with WebAssembly (WASM) and Android CFI.
  - Removed `render_system_update` from the logic loop to prevent rendering during the fixed update step. Rendering is now exclusively triggered by the View.

- Event System:
  - Implemented double-buffered event queues to safely handle events triggered within event listeners.
  - Removed global event system access; systems now access events via the `game_logic` context.

- Input Handling:
  - Decoupled Input System from Rendering. Input configuration is now passed via a read-only struct (`controller_config`) rather than global variables.
  - Added support for screen resize events to recalculate virtual controller layout dynamically.

- Cleanup:
  - Moved generic engine components (`ai_system`, `ai_component`) from `game/engine` to `source/game_logic`.
  - Added stubs for `process_manager` to support future temporal actions.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -27,7 +27,7 @@ include(ExternalProject)
 set(COMMON_TOOLCHAIN_ARGS "")
 if(CMAKE_TOOLCHAIN_FILE)
   list(APPEND COMMON_TOOLCHAIN_ARGS
-       "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}")
+    "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}")
 endif()
 if("${PLATFORM}" STREQUAL "Android")
   set(PLATFORM_IS_ANDROID TRUE)
@@ -43,8 +43,8 @@ if(ANDROID AND ${PLATFORM_IS_ANDROID})
     set(ANDROID_NDK $ENV{ANDROID_NDK})
   endif()
   list(APPEND COMMON_TOOLCHAIN_ARGS "-DANDROID_ABI=${ANDROID_ABI}"
-       "-DANDROID_PLATFORM=${ANDROID_PLATFORM}" "-DANDROID_NDK=${ANDROID_NDK}"
-       "-DENABLE_SANITIZERS=${ENABLE_SANITIZERS}")
+    "-DANDROID_PLATFORM=${ANDROID_PLATFORM}" "-DANDROID_NDK=${ANDROID_NDK}"
+    "-DENABLE_SANITIZERS=${ENABLE_SANITIZERS}")
 endif()
 
 find_package(memalloc QUIET)
@@ -53,18 +53,19 @@ if(NOT TARGET memalloc::memalloc)
   message(STATUS "memalloc not found, adding as ExternalProject")
   ExternalProject_Add(
     MemAlloc
+    # SOURCE_DIR c:/Jay/memalloc
     GIT_REPOSITORY "https://github.com/iudah/memalloc.git"
     GIT_TAG origin/master
     GIT_SHALLOW TRUE
     INSTALL_DIR ${CMAKE_BINARY_DIR}/memalloc
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXECUTABLE=OFF
-               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
-               -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
+    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+    -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
     # BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     # UPDATE_DISCONNECTED TRUE
     BUILD_BYPRODUCTS
-      "${CMAKE_BINARY_DIR}/memalloc/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}memalloc${CMAKE_STATIC_LIBRARY_SUFFIX}"
+    "${CMAKE_BINARY_DIR}/memalloc/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}memalloc${CMAKE_STATIC_LIBRARY_SUFFIX}"
   )
 
   file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/memalloc/include")
@@ -75,9 +76,9 @@ endif()
 set_target_properties(
   memalloc_imported
   PROPERTIES
-    IMPORTED_LOCATION
-    "${CMAKE_BINARY_DIR}/memalloc/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}memalloc${CMAKE_STATIC_LIBRARY_SUFFIX}"
-    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_BINARY_DIR}/memalloc/include")
+  IMPORTED_LOCATION
+  "${CMAKE_BINARY_DIR}/memalloc/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}memalloc${CMAKE_STATIC_LIBRARY_SUFFIX}"
+  INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_BINARY_DIR}/memalloc/include")
 
 find_package(zot QUIET)
 add_library(zot_imported STATIC IMPORTED)
@@ -85,18 +86,19 @@ if(NOT TARGET zot::zot)
   message(STATUS "zot not found, adding as ExternalProject")
   ExternalProject_Add(
     zot
+    # SOURCE_DIR c:/Jay/zot
     GIT_REPOSITORY "https://github.com/iudah/zot.git"
     GIT_TAG origin/main
     GIT_SHALLOW TRUE
     INSTALL_DIR ${CMAKE_BINARY_DIR}/zot
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXECUTABLE=OFF
-               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
-               -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
+    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+    -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
     # BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     # UPDATE_DISCONNECTED TRUE
     BUILD_BYPRODUCTS
-      "${CMAKE_BINARY_DIR}/zot/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}zot${CMAKE_STATIC_LIBRARY_SUFFIX}"
+    "${CMAKE_BINARY_DIR}/zot/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}zot${CMAKE_STATIC_LIBRARY_SUFFIX}"
   )
 
   file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/zot/include")
@@ -107,9 +109,9 @@ endif()
 set_target_properties(
   zot_imported
   PROPERTIES
-    IMPORTED_LOCATION
-    "${CMAKE_BINARY_DIR}/zot/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}zot${CMAKE_STATIC_LIBRARY_SUFFIX}"
-    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_BINARY_DIR}/zot/include")
+  IMPORTED_LOCATION
+  "${CMAKE_BINARY_DIR}/zot/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}zot${CMAKE_STATIC_LIBRARY_SUFFIX}"
+  INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_BINARY_DIR}/zot/include")
 
 if(${BUILD_RAYLIB})
   find_package(raylib QUIET)
@@ -121,30 +123,31 @@ if(${BUILD_RAYLIB})
     if(${PLATFORM_IS_ANDROID} AND ANDROID)
       set(PLATFORM Android)
       set(RAYLIB_EXTRA_ARGS -DCMAKE_BUILD_TYPE=MinSizeRel -DPLATFORM=Android
-                            -DCUSTOMIZE_BUILD=ON ${COMMON_TOOLCHAIN_ARGS})
+        -DCUSTOMIZE_BUILD=ON ${COMMON_TOOLCHAIN_ARGS})
     else()
       if(NOT "${PLATFORM}" STREQUAL "Desktop" AND NOT "${PLATFORM}" STREQUAL
-                                                  "Web")
+        "Web")
         set(PLATFORM Desktop)
       endif()
       set(RAYLIB_EXTRA_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
-                            -DPLATFORM=${PLATFORM})
+        -DPLATFORM=${PLATFORM})
     endif()
 
     ExternalProject_Add(
       raylib
+      # SOURCE_DIR c:/Jay/raylib
       GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
       GIT_SHALLOW TRUE
       GIT_CLONE_DEPTH 1
       INSTALL_DIR ${CMAKE_BINARY_DIR}/raylib
       CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXAMPLES=OFF
-                 -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-                 ${RAYLIB_EXTRA_ARGS}
+      -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON
+      ${RAYLIB_EXTRA_ARGS}
       # BUILD_ALWAYS OFF
       STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
       # UPDATE_DISCONNECTED TRUE
       BUILD_BYPRODUCTS
-        "${CMAKE_BINARY_DIR}/raylib/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}raylib${CMAKE_STATIC_LIBRARY_SUFFIX}"
+      "${CMAKE_BINARY_DIR}/raylib/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}raylib${CMAKE_STATIC_LIBRARY_SUFFIX}"
     )
 
     file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/raylib/include")
@@ -155,9 +158,9 @@ if(${BUILD_RAYLIB})
   set_target_properties(
     raylib_imported
     PROPERTIES
-      IMPORTED_LOCATION
-      "${CMAKE_BINARY_DIR}/raylib/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}raylib${CMAKE_STATIC_LIBRARY_SUFFIX}"
-      INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_BINARY_DIR}/raylib/include")
+    IMPORTED_LOCATION
+    "${CMAKE_BINARY_DIR}/raylib/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}raylib${CMAKE_STATIC_LIBRARY_SUFFIX}"
+    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_BINARY_DIR}/raylib/include")
 endif()
 
 if(${PLATFORM_IS_ANDROID})
@@ -165,17 +168,17 @@ if(${PLATFORM_IS_ANDROID})
 
   add_library(
     native_app_glue STATIC ${NATIVE_APP_GLUE}/android_native_app_glue.c
-                           ${NATIVE_APP_GLUE}/android_native_app_glue.h)
+    ${NATIVE_APP_GLUE}/android_native_app_glue.h)
   add_library(grey::native_app_glue ALIAS native_app_glue)
   target_include_directories(
     native_app_glue
     PUBLIC $<BUILD_INTERFACE:${NATIVE_APP_GLUE}/>
-           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-           $<INSTALL_INTERFACE:include>)
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>)
 
   target_compile_options(native_app_glue PRIVATE -fPIC -Wall
-                                                 -Werror=format-security)
+    -Werror=format-security)
 endif()
 
 find_package(Threads REQUIRED)
@@ -187,7 +190,7 @@ if(${PLATFORM_IS_ANDROID})
   add_library(${TARGET} STATIC ${SOURCE_FILES} ${HEADER_FILES})
   target_compile_options(${TARGET} PRIVATE -fPIC)
   target_compile_definitions(${TARGET} PRIVATE USE_ANDROID_LOG
-                                               TAG="${PROJECT_NAME}")
+    TAG="${PROJECT_NAME}")
 else()
   add_library(${TARGET} SHARED ${SOURCE_FILES} ${HEADER_FILES})
 endif()
@@ -196,13 +199,16 @@ add_library(grey::${TARGET} ALIAS ${TARGET})
 target_include_directories(
   ${TARGET}
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
-         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_application>
-         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic>
-         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/components>
-         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/entities>
-         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/systems>
-         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../3rd-party/neon_2_sse>
-         $<INSTALL_INTERFACE:include>)
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_application>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/components>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/entities>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/systems>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/graphics>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/core>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/physics>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../3rd-party/neon_2_sse>
+  $<INSTALL_INTERFACE:include>)
 
 target_link_libraries(${TARGET} PUBLIC m)
 target_link_libraries(${TARGET} PUBLIC Threads::Threads)
@@ -210,8 +216,8 @@ target_link_libraries(${TARGET} PUBLIC zot::zot)
 target_link_libraries(${TARGET} PUBLIC memalloc::memalloc)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows"
-   OR CMAKE_SYSTEM_NAME STREQUAL "CYGWIN"
-   OR CMAKE_SYSTEM_NAME STREQUAL "MSYS")
+  OR CMAKE_SYSTEM_NAME STREQUAL "CYGWIN"
+  OR CMAKE_SYSTEM_NAME STREQUAL "MSYS")
   target_link_libraries(${TARGET} PUBLIC ws2_32 gdi32 winmm)
 endif()
 
@@ -219,21 +225,21 @@ if(${PLATFORM_IS_ANDROID})
   target_link_libraries(
     ${TARGET}
     PUBLIC native_app_glue
-           log
-           android
-           EGL
-           GLESv2
-           OpenSLES
-           atomic
-           c
-           dl)
+    log
+    android
+    EGL
+    GLESv2
+    OpenSLES
+    atomic
+    c
+    dl)
 
   target_link_options(
     ${TARGET}
     PUBLIC
     # cmake-format: off
     -u ANativeActivity_onCreate
-   # cmake-format: on
+    # cmake-format: on
     -Wl,--build-id
     -Wl,--no-undefined
     -Wl,-z,noexecstack
@@ -252,7 +258,7 @@ target_compile_features(${TARGET} PUBLIC c_std_23)
 include(CheckCCompilerFlag)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL
-                                        "RelWithDebInfo")
+  "RelWithDebInfo")
   if(MSVC)
     target_compile_options(${TARGET} PRIVATE /Zi /Od /RTC1)
     target_link_options(${TARGET} PRIVATE /DEBUG)
@@ -276,7 +282,7 @@ endif()
 
 if(NOT MSVC)
   if((CMAKE_SYSTEM_PROCESSOR MATCHES "arm" OR CMAKE_SYSTEM_PROCESSOR MATCHES
-                                              "aarch64"))
+       "aarch64"))
     check_c_compiler_flag("-mfpu=neon" HAS_NEON_FLAG)
     if(HAS_NEON_FLAG)
       target_compile_options(${TARGET} PRIVATE -mfpu=neon)
@@ -291,7 +297,7 @@ endif()
 
 if(BUILD_PHONY_MAIN AND NOT ${PLATFORM_IS_ANDROID})
   file(WRITE ${CMAKE_BINARY_DIR}/grey_phony_main.c
-       "int game_main();\nint main() { game_main(); return 0; }\n")
+    "int game_main();\nint main() { game_main(); return 0; }\n")
   add_executable(grey_phony ${CMAKE_BINARY_DIR}/grey_phony_main.c)
   target_link_libraries(grey_phony PRIVATE ${TARGET})
 endif()
@@ -318,22 +324,22 @@ endif()
 
 install(
   FILES
-    "${CMAKE_BINARY_DIR}/zot/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}zot${CMAKE_STATIC_LIBRARY_SUFFIX}"
-    "${CMAKE_BINARY_DIR}/memalloc/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}memalloc${CMAKE_STATIC_LIBRARY_SUFFIX}"
+  "${CMAKE_BINARY_DIR}/zot/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}zot${CMAKE_STATIC_LIBRARY_SUFFIX}"
+  "${CMAKE_BINARY_DIR}/memalloc/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}memalloc${CMAKE_STATIC_LIBRARY_SUFFIX}"
   DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 install(DIRECTORY "${CMAKE_BINARY_DIR}/zot/include/"
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install(DIRECTORY "${CMAKE_BINARY_DIR}/memalloc/include/"
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 if(${BUILD_RAYLIB})
   install(
     FILES
-      "${CMAKE_BINARY_DIR}/raylib/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}raylib${CMAKE_STATIC_LIBRARY_SUFFIX}"
+    "${CMAKE_BINARY_DIR}/raylib/${CMAKE_INSTALL_LIBDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}raylib${CMAKE_STATIC_LIBRARY_SUFFIX}"
     DESTINATION ${CMAKE_INSTALL_LIBDIR})
   install(DIRECTORY "${CMAKE_BINARY_DIR}/raylib/include/"
-          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 endif()
 
 install(FILES ${HEADER_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
