Implement grid system, WFC foundation, and world entity
- Add Grid data structure and GridComponent.
- Implement World Entity initialization in `world.c` attaching Grid and Render components.
- Add Wave Function Collapse (WFC) skeleton `wave_fn_collapse.c` for procedural generation.
- Update `render_system` to handle Grid rendering (with a distinct pass).
- Register new components in `component_manager` and `CMakeLists`.
- Fix formatting in AABB component and update screen config signatures.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -204,6 +204,7 @@ target_include_directories(
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/components>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/entities>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/systems>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/grid>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/graphics>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/core>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/physics>
