--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   // Required in Termux Android environment
-  "cmake.buildDirectory": "${env:HOME}/${workspaceFolderBasename}/build",
+  // "cmake.buildDirectory": "${env:HOME}/${workspaceFolderBasename}/build",
   "cmake.configureSettings": {
     "ENABLE_SANITIZERS": "off"
   }
