Force Windows-specific configurations under MSYS etc for raylib in CMakeLists.txt.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -93,7 +93,7 @@ if(NOT TARGET zot::zot)
     INSTALL_DIR ${CMAKE_BINARY_DIR}/zot
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXECUTABLE=OFF
     -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
-    -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
+    -DCMAKE_POSITION_INDEPENDENT_CODE=ON $e{COMMON_TOOLCHAIN_ARGS}
     # BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     # UPDATE_DISCONNECTED TRUE
@@ -164,6 +164,16 @@ if(${BUILD_RAYLIB})
       set(RAYLIB_EXTRA_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
         -DPLATFORM=${PLATFORM})
     endif()
+      if(CMAKE_SYSTEM_NAME STREQUAL "Windows"
+      OR CMAKE_SYSTEM_NAME STREQUAL "CYGWIN"
+      OR CMAKE_SYSTEM_NAME STREQUAL "MSYS")
+        list(APPEND RAYLIB_EXTRA_ARGS
+          -DPLATFORM=Desktop
+          -DUSE_EXTERNAL_GLFW=OFF
+          -DGLFW_BUILD_X11=OFF
+          -DGLFW_BUILD_WAYLAND=OFF
+          -DGLFW_BUILD_WIN32=ON)
+      endif()
 
     ExternalProject_Add(
       raylib
