--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -93,7 +93,7 @@ if(NOT TARGET zot::zot)
     INSTALL_DIR ${CMAKE_BINARY_DIR}/zot
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXECUTABLE=OFF
     -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
-    -DCMAKE_POSITION_INDEPENDENT_CODE=ON $e{COMMON_TOOLCHAIN_ARGS}
+    -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
     # BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     # UPDATE_DISCONNECTED TRUE
