Add GLFW to MSYS2 installation in workflow

--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           msystem: UCRT64
           update: true
-          install: git mingw-w64-ucrt-x86_64-gcc cmake make 
+          install: git mingw-w64-ucrt-x86_64-gcc cmake make mingw-w64-ucrt-x86_64-glfw
 
       - name: Set reusable strings
         id: strings
