--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -20,6 +20,7 @@ jobs:
             git
             cmake
             ninja
+            make
             mingw-w64-ucrt-x86_64-clang
             mingw-w64-ucrt-x86_64-glfw
 
